--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "webpack-merge": "^5.10.0"
     },
     "dependencies": {
-        "@csstools/normalize.css": "^12.1.1"
+        "@csstools/normalize.css": "^12.1.1",
+        "date-fns": "^3.2.0"
     }
 }
